# DensityViewer

./: CMakeLists.txt  PDF-viewer-test.pro  PDF-viewer.pro  colormap.cpp  colormap.h  densitydata.cpp  densitydata.h  densityviewer.cpp  densityviewer.h  densityviewertest.cpp  densityviewerwindow.cpp  densityviewerwindow.h  main.cpp
.github/workflows/: cmake.yml
cmake/: hdf5.cmake
test-files/: tiny_dataset.h5
